--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     
 </head>
 <body>
+    <!--
+      Navigation Bar
+    -->
     <header>
         <nav id="sideNav">
             <svg>
@@ -93,6 +96,9 @@
         </nav>
     </header>
 
+    <!--
+      Main content page
+    -->
     <div id="pageContainer">
         <main>
           <h1 class="cover-heading">APCSA Review</h1>
@@ -119,6 +125,9 @@
         </main>
     </div>
 
+    <!--
+      Footer
+    -->
     <footer class="bg-dark text-center text-white">
       <div class="container p-4 pb-0">
         <section class="">
