--- a/unit1.html
+++ b/unit1.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="CSS/unit1Style.css">
 </head>
 <body>
+    <!--
+        Navigation Bar
+    -->
     <header>
         <nav id="sideNav">
             <svg>
@@ -92,6 +95,9 @@
         </nav>
     </header>
     
+    <!--
+        Main content page
+    -->
     <h1>Unit 1 - Getting Started and Primitive Types</h1>
     <main id="pageContainer">
         <p class="font-weight-bold lead">AP Exam Weighting: 2.5-5%</p>
@@ -394,6 +400,9 @@
         <iframe height=375 width=700 src=https://www.interviewbit.com/embed/snippet/da8da111aff06ac82610 title='Interviewbit Ide snippet/da8da111aff06ac82610' loading="lazy" allow="clipboard-write" allowfullscreen referrerpolicy="unsafe-url" sandbox="allow-scripts allow-same-origin allow-popups allow-top-navigation-by-user-activation allow-popups-to-escape-sandbox" id="compiler"></iframe>
     </main>
 
+    <!--
+        Footer
+    -->
     <footer class="bg-dark text-center text-white">
         <div class="container p-4 pb-0">
             <section class="">
